--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "cd": "hexo clean && hexo && hexo deploy"
+    "cd": "hexo clean && hexo generate && hexo deploy"
   },
   "hexo": {
     "version": "7.2.0"
