--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Helianthus's Blog
 subtitle: ''
 description: ''
 keywords: null
-author: Peng Xie
-language: zh-CN
+author: Helianthus
+language: en
 timezone: Asia/Shanghai
 url: https://love1angel.github.io/
 permalink: ':year/:month/:day/:title/'
