--- a/_config.post.yml
+++ b/_config.post.yml
@@ -1,4 +1,10 @@
 widgets:
+    -
+        # Where should the widget be placed, left sidebar or right sidebar
+        position: left
+        type: toc
+        # Whether to show the index of each heading
+        index: true
 
 sidebar:
     # Left sidebar configurations
