--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -110,6 +110,7 @@ navbar:
         Categories: /categories
         Tags: /tags
         About: /about
+        Org: /org
     # Links to be shown on the right of the navigation bar
     links:
         # Download on GitHub:
